; ModuleID = '/home/carl/AnghaBench/redis/src/extr_redis-cli.c_clusterManagerReleaseReshardTable.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_redis-cli.c_clusterManagerReleaseReshardTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @clusterManagerReleaseReshardTable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clusterManagerReleaseReshardTable(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %23

8:                                                ; preds = %1
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @listRewind(i32* %9, i32* %3)
  br label %11

11:                                               ; preds = %14, %8
  %12 = call %struct.TYPE_3__* @listNext(i32* %3)
  store %struct.TYPE_3__* %12, %struct.TYPE_3__** %4, align 8
  %13 = icmp ne %struct.TYPE_3__* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %11
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32*, i32** %16, align 8
  store i32* %17, i32** %5, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @zfree(i32* %18)
  br label %11

20:                                               ; preds = %11
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @listRelease(i32* %21)
  br label %23

23:                                               ; preds = %20, %1
  ret void
}

declare dso_local i32 @listRewind(i32*, i32*) #1

declare dso_local %struct.TYPE_3__* @listNext(i32*) #1

declare dso_local i32 @zfree(i32*) #1

declare dso_local i32 @listRelease(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
